# perma-filecheck

./: Dockerfile  Dockerfile.ecs  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: prod.yml  staging.yml  tests.yml
