[tool.poetry]
name = "perma-filecheck"
license = "GPL-3.0-or-later"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.29.0"
python-multipart = "^0.0.18"
filetype = "^1.2.0"
python-dateutil = "^2.9.0.post0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
requests = "^2.31.0"
httpx = "^0.27.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov --cov-fail-under=100"
